aggiornato modello e migliorie varie